--- a/LoginSignUp/app/src/main/AndroidManifest.xml
+++ b/LoginSignUp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Otp"></activity>
+        <activity android:name=".Content"></activity>
+        <activity android:name=".Otp" />
         <activity android:name=".Signup" />
         <activity android:name=".Sign" />
         <activity android:name=".MainActivity">
