--- a/DependencyInjection2/app/build.gradle
+++ b/DependencyInjection2/app/build.gradle
@@ -5,16 +5,17 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.osos.roomimplementation"
+        applicationId "com.arcore.dependencyinjection"
         minSdkVersion 27
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    dataBinding{
-        enabled = true
+    buildFeatures{
+        viewBinding true
     }
 
     buildTypes {
@@ -23,29 +24,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
-    def room_version ="2.2.5"
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation "androidx.room:room-runtime:2.2.5"
-    annotationProcessor "androidx.room:room-compiler:2.2.5"
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
 
 
-
-
-
-    // Rx Java
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.4'
-
+    api 'com.google.dagger:dagger-android:2.28'
+    api 'com.google.dagger:dagger-android-support:2.28' // if you use the support libraries
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.28'
 
 }
