--- a/DebounceFunctionality/app/build.gradle
+++ b/DebounceFunctionality/app/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.arcore.dependencyinjection"
+        applicationId "com.android.debouncefunctionality"
         minSdkVersion 27
         targetSdkVersion 29
         versionCode 1
@@ -14,12 +13,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
-
     buildFeatures{
         viewBinding true
     }
-
 
     buildTypes {
         release {
@@ -27,9 +23,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
-
-
 }
 
 dependencies {
@@ -41,13 +34,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
-    // Dagger Dependencies
-    implementation 'com.google.dagger:dagger:2.28'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.28'
-    implementation "androidx.core:core-ktx:+"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-}
-repositories {
-    mavenCentral()
+
+    //RxJava Implementation
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
+    // (see https://github.com/ReactiveX/RxJava/releases for latest 3.x.x version)
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.4'
+
 }
