--- a/Navigation_Architecture_PlayGround/app/src/main/AndroidManifest.xml
+++ b/Navigation_Architecture_PlayGround/app/src/main/AndroidManifest.xml
@@ -9,12 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Navigation_Architecture_PlayGround">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".NavigationDrawer.NavigationDrawer"
+            android:label="@string/title_activity_navigation_drawer"
+            android:theme="@style/Theme.Navigation_Architecture_PlayGround.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".bottomNavigation.BottomNavigation">
+
         </activity>
     </application>
 
