--- a/Navigation_Architecture_PlayGround/app/build.gradle
+++ b/Navigation_Architecture_PlayGround/app/build.gradle
@@ -34,6 +34,11 @@ android {
 
 dependencies {
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.3'
+    implementation 'androidx.navigation:navigation-ui:2.3.3'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     def nav_version = "2.3.3"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -47,6 +52,10 @@ dependencies {
 
     //kotlin extensions
     implementation "androidx.core:core-ktx:1.3.2"
+    implementation "androidx.navigation:navigation-runtime-ktx:2.3.3"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
+
 
 
 
